feat: remove repeticao de DTOs nos controllers